# runtime

./: .bazelproject  .bazelrc  .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD.bazel  Cargo.toml  LICENSES.txt  MODULE.bazel  README.md  WORKSPACE  buf.yaml  bun.lockb  cargo.toml  develop.sh  go.mod  go.sum  godeps.bzl  maven_install.json  package.json  pnpm-lock.yaml  test.js  tsconfig.base.json
elide/bundler/: BUILD.bazel  bundler.go  bundler_wasm.go  version.go
elide/bundler/internal/logger/: BUILD.bazel
elide/esbuild/: BUILD.bazel  EsBuildEntry.kt  bundler.go  bundler_other.go
elide/esbuild/internal/api_helpers/: BUILD.bazel  use_timer.go
elide/runtime/js/: BUILD.bazel  HelloGuava.java  HelloWorld.java  config.bzl  console.ts  entry.js  entrypoint.js  intrinsics.externs.js  preload.js  tsconfig.runtime.json
elide/runtime/js/bridge/: BUILD.bazel  jserror.ts
elide/runtime/js/console/: BUILD.bazel  console.ts
elide/runtime/js/intrinsics/: BUILD.bazel  base.ts  base64.ts  console.ts  primordials.ts  timers.ts
elide/runtime/js/intrinsics/blob/: BUILD.bazel  Blob.ts  index.ts
elide/runtime/js/intrinsics/crypto/: crypto.ts
elide/runtime/js/intrinsics/err/: BUILD.bazel  ValueError.ts  index.ts
elide/runtime/js/intrinsics/node/: BUILD.bazel  core.d.ts  express.d.ts
elide/runtime/js/intrinsics/url/: BUILD.bazel  IURL.ts  IURLSearchParams.ts  URL.ts  URLSearchParams.ts  index.ts
elide/runtime/js/modules/: BUILD.bazel  esbuild.config.js
elide/runtime/js/modules/assert/: BUILD.bazel  assert.ts  index.ts  package.json
elide/runtime/js/modules/assert/strict/: BUILD.bazel  index.ts  package.json  strict.ts
elide/runtime/js/modules/buffer/: buffer.ts  index.ts  package.json
elide/runtime/js/modules/child_process/: BUILD.bazel  child_process.ts  index.ts  package.json
elide/runtime/js/modules/cluster/: BUILD.bazel  cluster.ts  index.ts  package.json
elide/runtime/js/modules/console/: BUILD.bazel  console.ts  index.ts  package.json
elide/runtime/js/modules/crypto/: BUILD.bazel  crypto.ts  index.ts  package.json
elide/runtime/js/modules/dgram/: BUILD.bazel  dgram.ts  index.ts  package.json
elide/runtime/js/modules/diagnostics_channel/: BUILD.bazel  diagnostics_channel.ts  index.ts  package.json
elide/runtime/js/modules/dns/: BUILD.bazel  dns.ts  index.ts  package.json
elide/runtime/js/modules/dns/promises/: BUILD.bazel  dns-async.ts  index.ts
elide/runtime/js/modules/domain/: BUILD.bazel  domain.ts  index.ts  package.json
elide/runtime/js/modules/elide/sqlite/: BUILD.bazel  index.ts  package.json  sqlite.ts
elide/runtime/js/modules/events/: BUILD.bazel  events.ts  index.ts  package.json
elide/runtime/js/modules/express/: BUILD.bazel  index.ts  package.json
elide/runtime/js/modules/fs/: BUILD.bazel  fs.ts  index.ts  package.json  promises.ts
elide/runtime/js/modules/fs/promises/: BUILD.bazel  fs-async.ts  index.ts
elide/runtime/js/modules/http/: BUILD.bazel  http.ts  index.ts  package.json
elide/runtime/js/modules/http2/: BUILD.bazel  http2.ts  index.ts  package.json
elide/runtime/js/modules/https/: BUILD.bazel  https.ts  index.ts  package.json
elide/runtime/js/modules/inspector/: BUILD.bazel  index.ts  package.json
elide/runtime/js/modules/inspector/promises/: BUILD.bazel  index.ts  inspector-async.ts
elide/runtime/js/modules/module/: BUILD.bazel  index.ts  module.ts  package.json
elide/runtime/js/modules/net/: BUILD.bazel  index.ts  net.ts  package.json
elide/runtime/js/modules/os/: BUILD.bazel  index.ts  os.ts  package.json
elide/runtime/js/modules/path/: BUILD.bazel  index.ts  package.json  path.ts
elide/runtime/js/modules/path/posix/: BUILD.bazel  index.ts  package.json  path-posix.ts
elide/runtime/js/modules/perf_hooks/: BUILD.bazel  index.ts  package.json  perf_hooks.ts
elide/runtime/js/modules/process/: BUILD.bazel  index.ts  package.json  process.ts
elide/runtime/js/modules/querystring/: BUILD.bazel  index.ts  package.json  querystring.ts
elide/runtime/js/modules/readline/: BUILD.bazel  index.ts  package.json  readline.ts
elide/runtime/js/modules/stream/: BUILD.bazel  index.ts  package.json  stream.ts
elide/runtime/js/modules/string_decoder/: BUILD.bazel  index.ts  package.json  string_decoder.ts
elide/runtime/js/modules/test/: BUILD.bazel  index.ts  package.json  test.ts
elide/runtime/js/modules/timers/: BUILD.bazel  index.ts  package.json  timers.ts
elide/runtime/js/modules/tls/: BUILD.bazel  index.ts  package.json  tls.ts
elide/runtime/js/modules/trace_events/: BUILD.bazel  index.ts  package.json  trace_events.ts
elide/runtime/js/modules/tty/: BUILD.bazel  index.ts  package.json  tty.ts
elide/runtime/js/modules/url/: BUILD.bazel  index.ts  package.json  url.ts
elide/runtime/js/modules/util/: BUILD.bazel  index.ts  package.json  util.js
elide/runtime/js/modules/v8/: BUILD.bazel  index.ts  package.json  v8.ts
elide/runtime/js/modules/vm/: BUILD.bazel  index.ts  package.json  vm.ts
elide/runtime/js/modules/wasi/: BUILD.bazel  index.ts  package.json  wasi.ts
elide/runtime/js/modules/worker/: BUILD.bazel  index.ts  package.json  worker.ts
elide/runtime/js/modules/zlib/: BUILD.bazel  index.ts  package.json  zlib.ts
elide/runtime/js/polyfills/: BUILD.bazel  abort-controller.js  base64.js  esbuild.config.js  fetch.js  node-streams.mjs  polyfills.js  readable-stream.mjs
elide/runtime/js/tools/: BUILD.bazel  base.ts  esbuild.config.js
elide/runtime/model/info/: BUILD.bazel  runtime_info.proto
elide/runtime/python/: BUILD.bazel  MANIFEST.MF
elide/runtime/python/elide/: BUILD.bazel  __init__.py
elide/runtime/python/sqlite3/: BUILD.bazel  __init__.py
elide/runtime/rs/: BUILD.bazel  ElideNativeRuntime.java  lib.rs  runtime.rs
elide/runtime/ts/: BUILD.bazel  entrypoint.ts  tsconfig.ts.json
samples/wasm/: BUILD.bazel  HelloWorldWASM.java
tests/elide/runtime/js/: BUILD.bazel  asserts.cjs  asserts.mjs  fs.cjs  fs.mjs  os.cjs  os.mjs  path.cjs  path.mjs  sanity.js
tools/conditions/: BUILD.bazel
types/: BUILD.bazel  internals.extern.js  primordials.d.ts
(+81 files in other folders)
