package(
    default_visibility = ["//visibility:public"],
)

load(
    "//tools/defs/tsc:exports.bzl",
    "ts_config",
)

exports_files([
    "cargo.toml",
    "cargo.lock",
    "cargo.bazel.lock",
])

filegroup(
    name = "tsconfig.json",
    srcs = ["tsconfig.base.json"],
)

ts_config(
    name = "tsconfig",
    src = ":tsconfig.json",
)
