package(
    default_visibility = ["//visibility:public"],
)

load(
    "//tools/defs/tsc:exports.bzl",
    "ts_config",
)

exports_files([
    "Cargo.toml",
    "Cargo.lock",
    "Cargo.Bazel.lock",
])

filegroup(
    name = "tsconfig.json",
    srcs = ["tsconfig.base.json"],
)

ts_config(
    name = "tsconfig",
    src = ":tsconfig.json",
)
