package(
    default_visibility = ["//visibility:public"],
)

load(
    "//tools/defs/tsc:exports.bzl",
    "ts_config",
)
load(
    "@bazel_gazelle//:def.bzl",
    "gazelle",
)

exports_files([
    "Cargo.toml",
    "Cargo.lock",
    "Cargo.Bazel.lock",
])

filegroup(
    name = "tsconfig.json",
    srcs = ["tsconfig.base.json"],
)

ts_config(
    name = "tsconfig",
    src = ":tsconfig.json",
)

# gazelle:prefix github.com/elide-dev/runtime
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-repin",
    args = [
        "-from_file=go.mod",
        "-to_macro=godeps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)
