module(
    name = "elide-runtime",
    version = "0.0.1",
)

bazel_dep(name = "bazel_skylib", version = "1.2.0")
bazel_dep(name = "protobuf", version = "3.19.1")
bazel_dep(name = "rules_java", version = "5.0.0")
bazel_dep(name = "rules_proto", version = "4.0.0")
bazel_dep(name = "rules_python", version = "0.4.0")
bazel_dep(name = "rules_sh", version = "0.2.0")
bazel_dep(name = "zlib", version = "1.2.11")
bazel_dep(name = "aspect_rules_js", version = "1.13.0")
bazel_dep(name = "aspect_rules_ts", version = "1.0.4")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)

use_repo(npm, "npm")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)

rules_ts_ext.deps()

use_repo(rules_ts_ext, "npm_typescript")

use_repo(rules_ts_ext, "npm_google_protobuf")

use_repo(rules_ts_ext, "npm_at_bazel_worker")

