load(
    "@npm//@bazel/typescript:index.bzl",
    _pure_ts_library = "ts_library",
)

package(
    default_visibility = ["//visibility:public"],
)

filegroup(
  name = "srcs",
  srcs = ["primordials.d.ts"],
)

_pure_ts_library(
  name = "ts",
  srcs = [":srcs"],
)


alias(
  name = "types",
  actual = ":ts",
)
