load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(
    default_visibility = ["//visibility:public"],
)

load(
    "//tools/defs/go:exports.bzl",
    "go_binary",
)

go_binary(
    name = "bundler",
    basename = "bundler",
    embed = [":bundler_lib"],
    cgo = True,
    linkmode = "c-shared",
)

go_library(
    name = "bundler_lib",
    srcs = [
        "bundler.go",
        "bundler_other.go",
        "bundler_wasm.go",
        "stdio_protocol.go",
        "version.go",
    ],
    importpath = "github.com/elide-dev/runtime/elide/bundler",
    deps = [
        "//elide/bundler/internal/api_helpers",
        "//elide/bundler/internal/logger",
        "@com_github_evanw_esbuild//pkg/api:go_default_library",
        "@com_github_evanw_esbuild//pkg/cli:go_default_library",
    ],
)
