load(
    "//tools:defs.bzl",
    "js_library",
)
load(
    "//tools/defs:elide.bzl",
    "js_runtime",
)
load(
    "//elide/runtime/js:config.bzl",
    "BASE_JS_EXTERNS",
)

package(
    default_visibility = ["//visibility:public"],
)


## -- Entrypoint -- ##

js_library(
    name = "entrypoint",
    srcs = ["entry.js"],
)

EXTERNS = BASE_JS_EXTERNS + [
    # Any additional externs here.
]

js_runtime(
    name = "runtime",
    entrypoint = "elide.runtime.js.entry",
    deps = EXTERNS + [
        ":entrypoint",
    ],
)

alias(
    name = "js",
    actual = "runtime",
)
