package(
    default_visibility = ["//visibility:public"],
)

load(
    "//tools:defs.bzl",
    "js_library",
    "ts_config",
    "ts_library",
)
load(
    "//tools/defs:elide.bzl",
    "js_runtime",
)
load(
    "//elide/runtime/js:config.bzl",
    "BASE_JS_EXTERNS",
)

MODULE_NAME = "elide.runtime.js"


## -- Configuration -- ##

filegroup(
    name = "runtime_tsconfig_json",
    srcs = ["tsconfig.runtime.json"],
)

ts_config(
    name = "tsconfig",
    src = ":runtime_tsconfig_json",
    deps = [
        "//:tsconfig"
    ],
)


## -- Top-level Intrinsics -- ##

ts_library(
    name = "console",
    srcs = [
        "console.ts"
    ],
    module = MODULE_NAME,
)


## -- Entrypoint -- ##

js_library(
    name = "entrypoint",
    srcs = ["entry.js"],
    ts_deps = [
        ":console",
    ],
)

EXTERNS = BASE_JS_EXTERNS + [
    # Any additional externs here.
]

js_runtime(
    name = "runtime",
    entrypoint = "elide.runtime.js.entry",
    deps = EXTERNS + [
        ":entrypoint",
    ],
)

alias(
    name = "js",
    actual = "runtime",
)
