load(
    "//tools:defs.bzl",
    "ts_config",
)
load(
    "//tools/defs:elide.bzl",
    "ts_runtime",
)
load(
    "//elide/runtime/js:config.bzl",
    "TS_MODULES",
)

package(
    default_visibility = ["//visibility:public"],
)

MODULE_NAME = "elide.runtime.ts"

## -- Configuration -- ##

filegroup(
    name = "runtime_tsconfig_ts_json",
    srcs = ["tsconfig.ts.json"],
)

ts_config(
    name = "tsconfig",
    src = ":runtime_tsconfig_ts_json",
    deps = ["//:tsconfig"],
)

## -- Entrypoints -- ##

ts_runtime(
    name = "entrypoint-ts",
    main = "entrypoint.ts",
    ts_config = ":tsconfig",
    deps = TS_MODULES + [
        "@npm//tslib",
    ],
    closure_deps = [
        "//third_party/google/tsickle:bridge",
        "//third_party/google/tsickle:tslib",
    ] + [
        "//elide/runtime/js/intrinsics:base64_js",
        "//elide/runtime/js/intrinsics/url:url_js",
    ],
    extra_sources = [
        "//third_party/microsoft/typescript/tsc",
    ],
)

alias(
    name = "ts",
    actual = "entrypoint-ts",
)
