load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(
    default_visibility = ["//visibility:public"],
)

load(
    "//tools/defs/go:exports.bzl",
    "go_library",
)

go_library(
    name = "api_helpers",
    srcs = ["use_timer.go"],
    importpath = "github.com/elide-dev/runtime/internal/api_helpers",
)
