load(
    "//tools:defs.bzl",
    "ts_library",
)
package(
    default_visibility = ["//visibility:public"],
)

MODULE_NAME = "@elide/runtime/js/bridge"

ts_library(
    name = "js-error",
    srcs = [
        "jserror.ts",
    ],
    module = MODULE_NAME,
    deps = [
        "//elide/runtime/js/intrinsics/err",
    ],
)

alias(
    name = "bridge",
    actual = "js-error",
)
