load(
    "//tools:defs.bzl",
    "ts_library",
)
package(
    default_visibility = ["//visibility:public"],
)

MODULE_NAME = "@elide/runtime/js/bridge"

ts_library(
    name = "js-error",
    srcs = [
        "jserror.ts",
    ],
    module = MODULE_NAME,
    deps = [
        "//elide/runtime/js/intrinsics/err",
    ],
    suppress = [
        "JSC_INEXISTENT_PROPERTY",
        "JSC_UNRECOGNIZED_TYPE_ERROR",
    ],
)

alias(
    name = "bridge",
    actual = "js-error",
)
