load(
    "//tools:defs.bzl",
    "ts_library",
)
package(
    default_visibility = ["//visibility:public"],
)

ts_library(
    name = "express",
    srcs = [
        "core.d.ts",
        "express.d.ts",
    ],
    module = "@elide/runtime/js/intrinsics/node",
)

alias(
    name = "node",
    actual = "express",
)
