package(
    default_visibility = ["//visibility:public"],
)

load(
    "//tools:defs.bzl",
    "ts_library",
)

ts_library(
    name = "url",
    srcs = [
        "URL.ts",
        "URLSearchParams.ts",
        "index.ts",
    ],
    module = "@elide/runtime/js/intrinsics/url",
    deps = [
        "//elide/runtime/js/intrinsics/blob",
    ],
)
