load(
    "//tools/defs:elide.bzl",
    "js_module",
)
package(
    default_visibility = ["//visibility:public"],
)

js_module(
    name = "promises",
    host_module = "fs",
    srcs = [
        "fs-async.ts",
        "index.ts",
    ],
    deps = [
        "//elide/runtime/js/modules/path",
    ],
)
